kustomize-units/minio-monitoring-tenant/ingress-minio-monitoring-tenant-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring-console
  namespace: minio-monitoring-tenant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ## Remove if using CA signed certificate
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
      - ${MINIO_MONITORING_CONSOLE_DNS}
    secretName: minio-monitoring-tenant-tls
  rules:
  - host: ${MINIO_MONITORING_CONSOLE_DNS}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-console
            port:
              number: 9443
